--- a/apps/demo-angular/package.json
+++ b/apps/demo-angular/package.json
@@ -1,7 +1,8 @@
 {
   "main": "./src/main.ts",
   "dependencies": {
-    "@nativescript/core": "file:../../node_modules/@nativescript/core"
+    "@nativescript/core": "file:../../node_modules/@nativescript/core",
+    "@nativescript/nativescript-custom-rotors": "file:../../dist/packages/nativescript-custom-rotors"
   },
   "devDependencies": {
     "@nativescript/android": "~8.2.0",
