--- a/apps/demo-angular/package.json
+++ b/apps/demo-angular/package.json
@@ -2,7 +2,8 @@
   "main": "./src/main.ts",
   "dependencies": {
     "@nativescript/core": "file:../../node_modules/@nativescript/core",
-    "@nativescript/nativescript-custom-rotors": "file:../../dist/packages/nativescript-custom-rotors"
+    "@nativescript/nativescript-custom-rotors": "file:../../dist/packages/nativescript-custom-rotors",
+    "@nativescript/camera2": "file:../../dist/packages/camera2"
   },
   "devDependencies": {
     "@nativescript/android": "~8.2.0",
