--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "publish-packages": "nx g @nativescript/plugin-tools:publish",
     "sync-packages-with-demos": "nx g @nativescript/plugin-tools:sync-packages-with-demos",
     "remove-package": "nx g @nativescript/plugin-tools:remove-package",
-    "add-demo": "nx g @nativescript/plugin-tools:add-demo"
+    "add-demo": "nx g @nativescript/plugin-tools:add-demo",
+    "demo.android": "nx run demo:android"
   },
   "private": true,
   "devDependencies": {
+    "@angular-devkit/build-angular": "^14.0.0",
     "@angular/animations": "^14.0.0",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
@@ -27,7 +29,7 @@
     "@angular/router": "^14.0.0",
     "@nativescript/angular": "^14.0.0",
     "@nativescript/core": "~8.2.0",
-    "@nativescript/plugin-tools": "4.0.1",
+    "@nativescript/plugin-tools": "~5.0.0",
     "@nativescript/types": "~8.2.0",
     "@nativescript/webpack": "~5.0.5",
     "@ngtools/webpack": "^14.0.0",
@@ -37,13 +39,14 @@
     "ng-packagr": "^14.0.0",
     "rxjs": "~7.5.0",
     "typescript": "~4.7.3",
-    "zone.js": "~0.11.1",
-    "@angular-devkit/build-angular": "^14.0.0",
-    "nativescript-permissions": "1.3.11"
+    "zone.js": "~0.11.1"
   },
   "lint-staged": {
     "**/*.{js,ts,scss,json,html}": [
       "npx prettier --write"
     ]
+  },
+  "dependencies": {
+    "@nativescript-community/perms": "^2.2.25"
   }
 }
