--- a/packages/camera2/platforms/android/include.gradle
+++ b/packages/camera2/platforms/android/include.gradle
@@ -4,4 +4,5 @@ dependencies {
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
     implementation"androidx.camera:camera-view:${camerax_version}"
     implementation "androidx.camera:camera-extensions:${camerax_version}"
+    implementation "androidx.camera:camera-video:${camerax_version}"
   }
